--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -20,32 +20,8 @@
   <body>
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
       <div class='container'>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
         <a class="navbar-brand" href="/">
-          <span class='strava-logo'>Strava</span>
-          Developers <sup>(β)</sup>
+          <span class='strava-logo'><img src="/images/strava_logo_nav.png"></span> | Developers
         </a>
-
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">API Documentation</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="/docs">Home</a>
-                <a class="dropdown-item" href="/docs/reference">Reference</a>
-                <a class="dropdown-item" href="/docs/authentication">Authentication</a>
-                <a class="dropdown-item" href="/docs/rate-limiting">Rate Limiting</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Libraries</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/playground">Playground</a>
-            </li>
-          </ul>
-        </div>
       </div>
     </nav>
