Cleans up markup, spacing and styles for the developers page index

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,88 +1,97 @@
 {{ partial "header.html" . }}
-<div class="container">
-  <div class="row p-3">
-    <div class="col text-center">
-      <h1>The Strava API</h1>
+
+<div class='section section-strava-api container'>
+  <h1>The Strava API</h1>
+
+  <p class='lead'>Strava athletes upload millions of activities every day. Our open API and this rich data set yield diverse opportunities for developers, from creating new hardware to augmenting the Strava experience.</p>
+
+  <div class='row cta-row'>
+    <div class='col'>
+      <a href='https://strava.com/settings/api' class='btn btn-primary btn-block'>
+        Create &amp; Manage Your App
+      </a>
     </div>
-    <div class="w-100"></div>
-    <div class="col">
-      Strava athletes upload millions of activities every day. Our open API and this rich data set yield diverse opportunities for developers, from creating new hardware to augmenting the Strava experience.
-    <br/><br/>
-      The Strava V3 API is a publicly available interface that allows developers to access Strava data.
-      The interface is stable and used by the Strava mobile apps.
-      However, we occasionally make major changes to improve performance and enhance our features.
-      See the <a href="/docs/changelog">changelog</a> for more details.
+
+    <div class='col'>
+      <a href='/docs/reference' class='btn btn-secondary btn-block'>
+        API Documentation
+      </a>
     </div>
-  </div>
-  <div class="row p-3">
-    <div class="col">
-      <a href="https://strava.com/settings/api" class="btn btn-primary btn-block">Create & Manage Your App</a>
+
+    <div class='col'>
+      <a href='/playground' class='btn btn-secondary btn-block'>
+        Explore the API Playground
+      </a>
     </div>
-    <div class="col">
-      <a href="/docs/reference" class="btn btn-secondary btn-block">API Docs</a>
-    </div>
-    <div class="col">
-      <a href="/playground" class="btn btn-secondary btn-block">Explore the API Playground</a>
-    </div>
-    <div class="col">
-      <a href="https://github.com/strava/developers.strava.com/#client-code" class="btn btn-secondary btn-block">Libraries</a>
+
+    <div class='col'>
+      <a href='https://github.com/strava/developers.strava.com/#client-code' class='btn btn-secondary btn-block'>Libraries</a>
     </div>
   </div>
 
+  <p>The Strava V3 API is a publicly available interface that allows developers to access Strava data. The interface is stable and used by the Strava mobile apps. However, we occasionally make major changes to improve performance and enhance our features (<a href='/docs/changelog'>see the changelog for more details</a>).</p>
 
-  <div class="hero">
-    <div class="jumbotron">
-      <div class="row">
-        <div class="col text-center">
-          <h2>Strava Apps</h2>
-          <p class="left">Thousands of amazing developers from all over the world are making apps for Strava. <br/>
-            Far more athletes are using those apps to augment their Strava experience.  <br/>
-            There’s an app for everyone, from those that let you dive deep into the nerdiest of performance data, to an app that helps you make a friend in your neighborhood who runs the same pace as you.
-          </p>
-          <a href="https://www.strava.com/apps" class="btn btn-secondary">View the App Directory</a>
-        </div>
+</div>
+
+<div class='section section-strava-apps container text-center'>
+  <div class='hero'>
+    <div class='jumbotron'>
+      <h2>Strava Apps</h2>
+      <p>
+         Thousands of amazing developers from all over the world power their apps with Strava data. Far more athletes are using those apps to augment their Strava experience. There’s an app for everyone, from those that let you dive deep into the nerdiest of performance data, to an app that helps you make a friend in your neighborhood who runs the same pace as you.
+      </p>
+      <a href='https://www.strava.com/apps' class='btn btn-secondary'>View the App Directory</a>
+    </div>
+  </div>
+</div>
+
+<div class='section footer'>
+  <div class='container'>
+    <div class='row'>
+      <div class='col-md-4'>
+        <h2>Agreement &amp; Brand Guidelines</h2>
+        <p>
+          To use the Strava API, you need to comply with the Strava API Agreement and our Brand Guidelines. Mandatory logos, linking, and attribution rules can also be found in the guidelines.
+        </p>
+        <ul class='list-links'>
+          <li>
+            <a href='https://www.strava.com/legal/api'>Strava API Agreement</a>
+          </li>
+          <li>
+            <a href='/guidelines'>Strava Brand Guidelines</a>
+          </li>
+        </ul>
       </div>
-    </div>
-  </div>
 
+      <div class='col-md-4'>
+        <h2>Strava Engineering</h2>
+        <p>
+          Learn more about the Strava Engineering Team and all the cool things we're working on.
+        </p>
+        <ul class='list-links'>
+          <li>
+            <a href='https://medium.com/strava-engineering'>Strava Engineering Blog</a>
+          </li>
+          <li>
+            <a href='https://boards.greenhouse.io/strava'>Careers at Strava</a>
+          </li>
+        </ul>
+      </div>
 
-  <div class="row p-3" style="background-color:#e5e5e5">
-    <div class="col-md-4">
-      <h2>Agreement & Brand Guidelines</h2>
-      <p>
-        To use the Strava API, you need to comply with the Strava API Agreement and our Brand Guidelines.
-        Mandatory logos, linking, and attribution rules can also be found in the guidelines.
-      </p>
-      <p>
-        <a href="https://www.strava.com/legal/api">Strava API Agreement</a>
-      </p>
-      <p>
-        <a href="/guidelines">Strava Brand Guidelines</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Strava Engineering</h2>
-      <p>
-        Learn more about the Strava Engineering Team and all the cool things we're working on.
-      </p>
-      <p>
-        <a href="https://medium.com/strava-engineering">Strava Engineering Blog</a>
-      </p>
-      <p>
-        <a href="https://boards.greenhouse.io/strava">Careers at Strava</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Mailing List</h2>
-      <p>
-        Join the Strava API discussion group to ask questions and hear from other API developers.
-      </p>
-      <p>
-        <a href="https://groups.google.com/forum/#!forum/strava-api">Join the Strava Developer Group</a>
-      </p>
-      <p>
-        <a href="mailto:api@strava.com">Email API Support</a>
-      </p>
+      <div class='col-md-4'>
+        <h2>Mailing List</h2>
+        <p>
+          Join the Strava API discussion group to ask questions and hear from other API developers.
+        </p>
+        <ul class='list-links'>
+          <li>
+            <a href='https://groups.google.com/forum/#!forum/strava-api'>Join the Strava Developer Group</a>
+          </li>
+          <li>
+            <a href='mailto:api@strava.com'>Email API Support</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
