--- a/static/strava-developers.css
+++ b/static/strava-developers.css
@@ -1,5 +1,24 @@
-/* Resets */
+/* Scrollbars */
+html ::-webkit-scrollbar {
+  width: 8px;
+}
+html ::-webkit-scrollbar-track {
+  background-color: #f5f5fa;
+  border-left: 1px solid #e6e6eb;
+  border-radius: 0;
+  padding: 1px;
+}
+html ::-webkit-scrollbar-thumb {
+  background-color: #2d2d32;
+  border-radius: 0;
+  transition: background-color 0.3s ease;
+}
+html ::-webkit-scrollbar-thumb:hover {
+  background-color: #3d3d42;
+}
 
+
+/* Resets */
 body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
@@ -7,8 +26,25 @@ body {
   line-height: 1.45em;
   text-shadow: none !important;
 }
-.content {
-  padding: 3rem 1.5rem;
+
+/* Typography */
+h1, h2 {
+  line-height: 1.25em;
+}
+h1 {
+  font-size: 32px;
+  letter-spacing: -0.015em;
+  margin-bottom: 16px;
+}
+h2 {
+  font-size: 24px;
+  margin-bottom: 16px;
+}
+p {
+}
+p.lead {
+  font-size: 16px;
+  line-height: 1.45em;
 }
 code {
   font-size: 14px;
@@ -17,15 +53,10 @@ code {
   font-weight: 400;
 }
 
-/* Typography */
-h1 {
-  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  letter-spacing: -0.015em;
+/* Links */
+a {
+  color: #007FB6;
 }
-h2, h3, h4, h5, h6 {
-  font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
 
 /* Global Nav */
 nav.bg-inverse {
@@ -39,9 +70,26 @@ nav.bg-inverse a:hover,
 nav.bg-inverse a:active {
   color: #fff;
 }
+nav .navbar-brand {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  font-size: 16px;
+  font-weight: 300;
+  vertical-align: middle;
+  -webkit-font-smoothing: antialiased;
+}
+nav .strava-subbranding {
+  display: flex;
+  align-content: center;
+  border-left: 1px solid #fff;
+  display: inline-block;
+  margin-left: 16px;
+  padding-left: 16px;
+  opacity: 0.6;
+}
 
 /* Tables */
-
 td {
   vertical-align: top;
   padding: 2px 8px;
@@ -75,17 +123,73 @@ table.parameters td:first-child {
   font-size: 12px;
 }
 
-.btn-primary, .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+/* Lists */
+.list-links {
+  padding-left: 24px;
+  list-style: square;
+}
+.list-links li {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+/* Buttons */
+.btn {
+  border-radius: 1px;
+  font-size: 14px;
+}
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary {
   background-color: #fc4c02;
   border-color: #fc4c02;
+}
+
+/* Sections */
+.cta-row {
+  margin-top: 32px;
+  margin-bottom: 32px;
 }
 
 .hero {
   background-image: url("/images/apps-hero.jpg");
   background-size: cover;
+  color: #fff;
+  border-radius: 0;
+}
+.jumbotron {
+  background-color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 0;
+  border-radius: 0;
+}
+.jumbotron p {
+  max-width: 680px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.jumbotron {
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
+.section {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.section-strava-apps {
+  padding-top: 0;
+  -webkit-font-smoothing: antialiased;
+}
+.section-strava-apps .btn {
+  border: none;
+}
+.footer {
+  margin-top: 32px;
+  background-color: #f5f5fa;
+}
+
+
+@media (max-width: 991px) {
+  .cta-row .btn {
+    margin-bottom: 16px;
+  }
 }
