--- a/static/reference.css
+++ b/static/reference.css
@@ -1,59 +1,87 @@
 /* ------------------------------------------------------------------------------------------
- * Content
+ * Resets
  * ------------------------------------------------------------------------------------------ */
-body {
-  min-width: 980px;
-  padding-top: 0;
-}
-
 * {
 	box-sizing: border-box;
 }
-
-.row:before, .row:after {
-	content: '';
-	display: block;
-	clear: both;
-}
-
-.row .col-md-6 {
-	float: left;
-	width: 50%;
-	padding-left: 15px;
-	padding-right: 15px;
-}
-
-.row {
-	display: flex;
-	flex-direction: row;
-}
-
-.left-pane {
-  padding-bottom: 25px;
-}
-
-.right-pane {
-	background-color: #333;
-	color: #fff;
-}
-
 body, p, a, div, th, td {
-  font-family: "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   font-size: 14px;
   text-shadow: none !important;
 }
+body {
+  min-width: 980px;
+  padding-top: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+
+/* ------------------------------------------------------------------------------------------
+ * Content
+ * ------------------------------------------------------------------------------------------ */
+
+/* Global Navbar */
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+.navbar .container {
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
+}
+.reference {
+  position: relative;
+  max-width: 100vw;
+  z-index: 1;
+}
+
+#content {
+  padding-left: 236px;
+  padding-right: 15px;
+  width: 100%;
+}
+.left-pane,
+.right-pane {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+.right-pane {
+	background-color: #2d2d32;
+	color: #fff;
+}
+.right-pane:empty {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.right-pane pre {
+  background-color: #3d3d42;
+}
+.right-pane code {
+  font-size: 12px;
+  line-height: 16px;
+}
+.right-pane pre::-webkit-scrollbar-track {
+  border: 1px solid #99999e;
+  background-color: #99999e;
+}
+.right-pane pre::-webkit-scrollbar-thumb {
+  background-color: #606065;
+}
+.right-pane pre::-webkit-scrollbar-thumb:hover {
+  background-color: #717176;
+}
+
 
 td.code {
   font-size: 14px;
   font-family: "Source Code Pro", monospace;
   font-style: normal;
   font-weight: 400;
-}
-
-#content {
-  z-Index: -1;
-  margin-left: 270px;
+  -webkit-font-smoothing: antialiased;
 }
 
 p {
@@ -238,48 +266,40 @@ pre code.sample-request-response-json {
  * ------------------------------------------------------------------------------------------ */
 
 .sidenav {
+  width: 220px;
   position: fixed;
-  width: 228px;
+  left: 0;
+  top: 45px;
+  bottom: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
-.navbar-fixed-side .navbar-nav .dropdown-menu {
-  padding-left: 14px;
+.navbar-fixed-side {
+  padding: 16px;
 }
-
-.navbar-fixed-side .navbar-nav .dropdown-menu > li > a {
-  border-left: thick transparent solid;
+ul.navbar-nav,
+ul.navbar-nav ul {
+  list-style: none;
+  padding-left: 0;
 }
-
-.navbar-fixed-side .navbar-nav .dropdown-menu {
-  padding-left: 14px;
-  border-bottom: none;
+ul.navbar-nav > li {
+  border-top: 1px solid #eee;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
-
-.navbar-fixed-side .navbar-nav > li > a:hover,
-.navbar-fixed-side .navbar-nav > li > a:focus,
-.navbar-fixed-side .navbar-nav .dropdown-menu > li > a:hover,
-.navbar-fixed-side .navbar-nav .dropdown-menu > li > a:focus {
-  background-color: white;
-  border-left: thick solid rgb(252,76,2);
-  color: #333;
-  text-decoration: none;
+ul.navbar-nav > li:first-child {
+  border-top: none;
+  padding-top: 0;
 }
-
-.navbar-fixed-side .navbar-nav .dropdown-menu > .active > a,
-.navbar-fixed-side .navbar-nav .dropdown-menu > .active > a:hover,
-.navbar-fixed-side .navbar-nav .dropdown-menu > .active > a:focus {
-  border-left: thick solid rgb(252,76,2);
-  background-color: white;
-  color: #333;
-  text-decoration: none;
+ul.navbar-nav a {
+  font-size: 14px;
 }
-
-.navbar-fixed-side .dropdown > .dropdown-toggle,
-.navbar-fixed-side .dropdown-menu > .dropdown-header {
-  margin-left: 22px;
-  font-size: 16px;
-  text-transform: none;
-  color: black !important;
+ul.navbar-nav ul {
+  margin-top: 8px;
+}
+ul.navbar-nav ul a {
+  font-size: 12px;
 }
 
 .dropdown-toggle::after {
@@ -290,163 +310,11 @@ pre code.sample-request-response-json {
 .navbar-fixed-side .navbar-nav .dropdown-menu > li > a {
   color: black;
 }
-
-/*.sidenav {
-  width: 228px;
-  margin: 0;
-  padding: 20px 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  overflow-x: hidden;
-  overflow-y: auto;
-  z-index: 10;
-  border-right: 1px solid #e5e5e5;
-}*/
-
-/*.sidenav > li > a {
-  display: block;
-  width: 192px;
-  margin: 0;
-  padding: 3px 25px;
-  border: 0;
-  border-left: transparent 4px solid;
-  border-right: transparent 4px solid;
-  font-weight: 400;
-  font-size: 14px;
-  color: #666;
-}
-
-.sidenav > li.nav-header > a {
-  padding: 5px 15px;
-  width: 190px;
-  font-weight: 700;
-  font-size: 16px;
-}
-
-.sidenav > li.nav-header.active > a {
-  color: #333;
-}
-
-.sidenav > .active > a {
-  position: relative;
-  z-index: 2;
-}
-
-.sidenav > li > a:hover {
-  color: #333;
-}
-
-.sidenav > li.has-modifications a {
-  border-right: #60d060 4px solid;
-}
-
-.sidenav > li.is-new a {
-  border-left: #e5e5e5 4px solid;
-}
-
-.sidenav > li > a:hover, .sidenav > li > a:focus {
-  background-color: white;
-  color: #333;
-}
-
-.nav-list>.active>a, .nav-list>.active>a:hover, .nav-list>.active>a:focus {
-  border-left: thick solid rgb(252,76,2);
-  background-color: white;
-  color: #333;
-}
-
-.sidenav > li.nav-header > a {
-  text-transform: none;
-  font-weight: normal;
-}*/
-
-/* ------------------------------------------------------------------------------------------
- * Tabs
- * ------------------------------------------------------------------------------------------ */
-
-/*.nav-tabs {
-  border-bottom: 1px solid #dddddd;
-}
-.nav-tabs > li {
-  float: left;
-  margin-bottom: -1px;
-}
-.nav-tabs > li > a {
-  margin-right: 2px;
-  line-height: 1.42857143;
-  border: 1px solid transparent;
-  border-radius: 2px 2px 0 0;
-  color: #666;
-}
-.nav-tabs > li > a:hover {
-  border-color: #f5f5f5 #f5f5f5 #dddddd;
-}
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:hover,
-.nav-tabs > li.active > a:focus {
-  color: #333;
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
-  border-bottom-color: transparent;
-  cursor: default;
-}
-.nav-tabs.nav-justified {
-  width: 100%;
-  border-bottom: 0;
-}
-.nav-tabs.nav-justified > li {
-  float: none;
-}
-.nav-tabs.nav-justified > li > a {
-  text-align: center;
-  margin-bottom: 5px;
-}
-.nav-tabs.nav-justified > .dropdown .dropdown-menu {
-  top: auto;
-  left: auto;
-}
-@media (min-width: 768px) {
-  .nav-tabs.nav-justified > li {
-    display: table-cell;
-    width: 1%;
-  }
-  .nav-tabs.nav-justified > li > a {
-    margin-bottom: 0;
-  }
-}
-.nav-tabs.nav-justified > li > a {
-  margin-right: 0;
-  border-radius: 2px;
-}
-.nav-tabs.nav-justified > .active > a,
-.nav-tabs.nav-justified > .active > a:hover,
-.nav-tabs.nav-justified > .active > a:focus {
-  border: 1px solid #dddddd;
-}
-@media (min-width: 768px) {
-  .nav-tabs.nav-justified > li > a {
-    border-bottom: 1px solid #dddddd;
-    border-radius: 2px 2px 0 0;
-  }
-  .nav-tabs.nav-justified > .active > a,
-  .nav-tabs.nav-justified > .active > a:hover,
-  .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #ffffff;
-  }
-}*/
-
-/*.nav-pills > li {
-  float: left;
-}*/
-
-.nav-pills > li > a {
-  border-radius: 2px;
+.nav-pills .nav-link {
+  border-radius: 0;
   color: #F5F5F5;
-}
-.nav-pills > li + li {
   margin-left: 2px;
+  transition: background-color 0.15s ease;
 }
 
 .nav-pills .nav-link.active,
@@ -456,38 +324,12 @@ pre code.sample-request-response-json {
   background-color: #fc4c02;
 }
 .nav-pills > li > a:hover {
-  background-color: #fc4c02;
+  background-color: #606065;
 }
-
-/*table.parameters {
-  border: none;
-}
-
-table.parameters tr {
-  border-top: 1px solid #E5E5E5;
-}
-
-table.parameters tr:first-child {
-  border-top: none;
-}
-
-table.parameters td {
-  border: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-table.parameters td:first-child {
-  text-align: right
-}
-
-.parameter-description {
-  color: #999;
-  font-size: 12px;
-}*/
 
 .right-pane h4 {
   color: #F5F5F5;
+  font-size: 18px;
 }
 
 .http {
