--- a/layouts/reference/single.html
+++ b/layouts/reference/single.html
@@ -1,5 +1,5 @@
 {{ partial "header.html" . }}
-<div class="container-fluid reference">
+<div class="reference">
   {{ .Content }}
 </div>
 {{ partial "footer.html" . }}
