[API-627] Updated clubs responses (#68)

--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -2309,29 +2309,16 @@
               }
             },
             "examples": {
-              "application/json": {
-                "id": 12345678987654321,
-                "username": "psagan",
-                "resource_state": 2,
-                "firstname": "Peter",
-                "lastname": "Sagan",
-                "city": "Oakland",
-                "state": "California",
-                "country": "United States",
-                "sex": "M",
-                "premium": true,
-                "created_at": "2011-08-28T18:04:51Z",
-                "updated_at": "2018-02-01T17:03:18Z",
-                "badge_type_id": 4,
-                "profile_medium": "https://dgalywyr863hv.cloudfront.net/pictures/athletes/123456789/123456789/3/medium.jpg",
-                "profile": "https://dgalywyr863hv.cloudfront.net/pictures/athletes/123456789/123456789/3/large.jpg",
-                "friend": null,
-                "follower": null,
-                "email": "zack@strava.com",
-                "membership": "member",
-                "admin": false,
-                "owner": false
-              }
+              "application/json": [
+                {
+                  "resource_state": 2,
+                  "firstname": "Peter",
+                  "lastname": "S.",
+                  "membership": "member",
+                  "admin": false,
+                  "owner": false
+                }
+              ]
             }
           },
           "default": {
@@ -2378,23 +2365,9 @@
             "examples": {
               "application/json": [
                 {
-                  "id": 12345678987654321,
-                  "username": "psagan",
                   "resource_state": 2,
                   "firstname": "Peter",
-                  "lastname": "Sagan",
-                  "city": "Oakland",
-                  "state": "California",
-                  "country": "United States",
-                  "sex": "F",
-                  "premium": false,
-                  "created_at": "2013-07-24T19:08:39Z",
-                  "updated_at": "2015-08-27T20:54:42Z",
-                  "badge_type_id": 0,
-                  "profile_medium": "https://dgalywyr863hv.cloudfront.net/pictures/athletes/123456789/123456789/2/medium.jpg",
-                  "profile": "https://dgalywyr863hv.cloudfront.net/pictures/athletes/123456789/294/123456789/large.jpg",
-                  "friend": null,
-                  "follower": null
+                  "lastname": "S."
                 }
               ]
             }
@@ -2443,88 +2416,19 @@
             "examples": {
               "application/json": [
                 {
-                  "id": 12345678987654321,
                   "resource_state": 2,
-                  "external_id": "garmin_push_123456789",
-                  "upload_id": 987654321,
                   "athlete": {
-                    "id": 12345678987654321,
-                    "username": "psagan",
                     "resource_state": 2,
                     "firstname": "Peter",
-                    "lastname": "Sagan",
-                    "city": "Oakland",
-                    "state": "CA",
-                    "country": "United States",
-                    "sex": "M",
-                    "premium": true,
-                    "created_at": "2011-02-26T06:07:54Z",
-                    "updated_at": "2018-02-02T00:46:25Z",
-                    "badge_type_id": 1,
-                    "profile_medium": "https://dgalywyr863hv.cloudfront.net/pictures/athletes/123456789/123456789/1/medium.jpg",
-                    "profile": "https://dgalywyr863hv.cloudfront.net/pictures/athletes/123456789/123456789/1/large.jpg",
-                    "friend": null,
-                    "follower": null
+                    "lastname": "S."
                   },
-                  "name": "Tour of California Stage 2",
-                  "distance": 48576.3,
-                  "moving_time": 5440,
-                  "elapsed_time": 5621,
-                  "total_elevation_gain": 256,
+                  "name": "World Championship",
+                  "distance": 2641.7,
+                  "moving_time": 577,
+                  "elapsed_time": 635,
+                  "total_elevation_gain": 8.8,
                   "type": "Ride",
-                  "start_date": "2018-02-09T19:25:04Z",
-                  "start_date_local": "2018-02-09T11:25:04Z",
-                  "timezone": "(GMT-08:00) America/Los_Angeles",
-                  "utc_offset": -28800,
-                  "start_latlng": [
-                    37.69,
-                    -121.71
-                  ],
-                  "end_latlng": [
-                    37.69,
-                    -121.71
-                  ],
-                  "location_city": "Oakland",
-                  "location_state": "CA",
-                  "location_country": "United States",
-                  "start_latitude": 37.69,
-                  "start_longitude": -121.71,
-                  "achievement_count": 0,
-                  "kudos_count": 3,
-                  "comment_count": 0,
-                  "athlete_count": 10,
-                  "photo_count": 0,
-                  "map": {
-                    "id": "a1399596448",
-                    "summary_polyline": "{_`eFl}yeVd@iBpFk@pBgCrDB@uQ{BeFnD{JvH}DuG}D_KrBPaIlj@Yqj@@StFAuEiBo@olAf@gLmAkLbCmMm@{PpJoP_CmRhCyGvCcLrKbElW~O~]yg@~@c@tHjCt^mHnKv@|Zg[~@]hw@gUbBQbrA}k@b@\\jlCgzAd@WjrAqOxPeHrPeErSgLsBqJvAsNfJiZh]}EpOwHfIyA`NAfi@_ExR?bJaEjFe@`I{CrKSfLoC|KN~R`DzAlHc@tOwP|M_@nOaNhJyPrCeMzJwD~E_Fc@}AuGmA}NoXuDcC_GMPeOpOaVvOyDxM}QGy]hEyb@bNk^bNqNXmqAnrDCFapBcl@sAb@onBbSMpBqDb{@Np@qr@fe@FxTwEfr@}]hwBt@JiqAcLT_CeYwEyM{I|BaErKxBtFApQkDWeB`CeGn@M~A",
-                    "resource_state": 2
-                  },
-                  "trainer": false,
-                  "commute": false,
-                  "manual": false,
-                  "private": false,
-                  "flagged": false,
-                  "gear_id": "b3853379",
-                  "from_accepted_tag": false,
-                  "average_speed": 8.929,
-                  "max_speed": 15.9,
-                  "average_cadence": 86.1,
-                  "average_temp": 24,
-                  "average_watts": 148,
-                  "weighted_average_watts": 188,
-                  "kilojoules": 805,
-                  "device_watts": true,
-                  "has_heartrate": true,
-                  "average_heartrate": 131.4,
-                  "max_heartrate": 167,
-                  "max_watts": 814,
-                  "elev_high": 276.6,
-                  "elev_low": 168,
-                  "pr_count": 0,
-                  "total_photo_count": 0,
-                  "has_kudoed": false,
-                  "workout_type": 10,
-                  "suffer_score": 54
+                  "workout_type": null
                 }
               ]
             }
