Fix getActivityById uri (#75)
* Fix getActivityById uri

Update GET /activities to GET /activities/{id}
As the `id` param is expected to be in the path

* fixup! Fix getActivityById uri

* fixup! Fix getActivityById uri

--- a/swagger/swagger.json.mustache
+++ b/swagger/swagger.json.mustache
@@ -1229,7 +1229,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/activities/{id}": {
       "get": {
         "operationId": "getActivityById",
         "summary": "Get Activity",
