Add units to activity elapsed time and moving time (#77)

--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -95,11 +95,11 @@
           },
           "moving_time": {
             "type": "integer",
-            "description": "The activity's moving time"
+            "description": "The activity's moving time, in seconds"
           },
           "elapsed_time": {
             "type": "integer",
-            "description": "The activity's elapsed time"
+            "description": "The activity's elapsed time, in seconds"
           },
           "total_elevation_gain": {
             "type": "number",
