Added gear_id back to activity

--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -204,6 +204,10 @@
           "has_kudoed": {
             "type": "boolean",
             "description": "Whether the logged-in athlete has kudoed this activity"
+          },
+          "gear_id": {
+            "type": "string",
+            "description": "The id of the gear for the activity"
           }
         }
       }
