Displaying better information

--- a/codegen/src/main/resources/strava-html/param.mustache
+++ b/codegen/src/main/resources/strava-html/param.mustache
@@ -1,7 +1,7 @@
 <tr>
   <td width="200px">
     {{#isBodyParam}}
-      &lt;Not a named parameter>
+      &lt;Parameter Name>
     {{/isBodyParam}}
     {{^isBodyParam}}
       <span class="parameter-name">{{baseName}}</span>
