--- a/swagger/activity.json.mustache
+++ b/swagger/activity.json.mustache
@@ -244,6 +244,10 @@
       "private": {
         "type": "boolean",
         "description": "Whether this activity is private"
+      },
+      "gear_id": {
+        "type": "string",
+        "description": "Identifier for the gear associated with the activity. ‘none’ clears gear from activity"
       }
     }
   }
